fix(theme-default): prevent events from overflowing time grid

--- a/packages/theme-default/src/components/calendar/view-week/week-wrapper.scss
+++ b/packages/theme-default/src/components/calendar/view-week/week-wrapper.scss
@@ -7,6 +7,7 @@
   padding-left: var(--sx-calendar-week-grid-padding-left);
   display: flex;
   height: var(--sx-week-grid-height);
+  overflow: hidden;
 }
 
 .sx__week-header {
